--- a/css/styles.css
+++ b/css/styles.css
@@ -38,9 +38,8 @@ p,h1,h2,h3,h4,h5,h6{
 .header{
     padding-right: 15px;
     padding-left: 15px;
-   /* padding-top: 24px;
-    padding-bottom: 24px;*/
-    border-bottom: 1px solid #e7e9fc
+    border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 .header .container{
     display: flex;
@@ -80,6 +79,21 @@ p,h1,h2,h3,h4,h5,h6{
     padding-top: 24px;
     padding-bottom: 24px;
     color: #2e2f42;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header-link.current{
+    position: relative;
+    color: #404bbf;
+}
+.header-link.current::after{
+    content: "";
+    border-radius: 2px;
+    width: 100%;
+    height: 4px;
+    position: absolute;
+    left: 0;
+    bottom: -2px;
+    background: #404bbf;
 }
 .header-address{
     margin-left: auto;
@@ -95,6 +109,7 @@ p,h1,h2,h3,h4,h5,h6{
     padding-top: 24px;
     padding-bottom: 24px;
     color: #434455;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-link:hover,
 .header-address-link:hover{
@@ -112,6 +127,11 @@ p,h1,h2,h3,h4,h5,h6{
     padding-top: 188px;
     padding-bottom: 188px;
     background: #2e2f42;
+    background-image:linear-gradient(
+       rgba(46, 47, 66, 0.7),
+       rgba(46, 47, 66, 0.7)),
+       url(../images/people-office\-1.jpg);
+       background-size: 100%;
 }
 .hero-title{
     font-weight: 700;
@@ -163,6 +183,21 @@ button{
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
     overflow: hidden;
+}
+.advantages-icon-list{
+    display: flex;
+    gap: 24px;
+}
+.advantages-icon-item{
+    width: calc((100% - 3 * 24px) / 4);
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+    width: 264px;
+    height: 112px;
+    background: #f4f4fd;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .advantages-list{
     display: flex;
@@ -233,7 +268,28 @@ button{
     line-height: 1.5;
     letter-spacing: 0.02em;
     text-align: center;
+    margin-bottom: 8px;
     color: #434455;
+}
+.team-icon-list{
+    display: flex;
+    gap: 24px;
+    align-items: center;
+    justify-content: center;
+}
+.team-icon-link{
+    width: calc((100% - 3 * 24px) / 4);
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    background-color: #4D5AE5;
+}
+.team-icon{
+    fill: #F4F4FD;
 }
 /***section portfolio***/
 .portfolio{
@@ -258,6 +314,27 @@ button{
 }
 .portfolio-item{
     width:calc((100% - 48px) / 3);
+}
+.portfolio-item:hover .portfolio-desc{
+    transform: translate(0);
+}
+.portfolio-img-desc{
+    position: relative;
+    overflow: hidden;
+}
+.portfolio-desc{
+    position: absolute;
+    background-color: #4d5ae5;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    padding: 40px 32px;
+    top: 0;
+    height: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms;
 }
 .portfolio-subtitle-text{
     padding: 32px 16px;
@@ -289,6 +366,12 @@ button{
     padding-bottom: 100px;
     background: #2e2f42;
 }
+.footer .container{
+    display: flex;
+}
+.footer-logo-text{
+    margin-right: 120px;
+}
 .footer-logo{
     font-family: "Raleway", sans-serif;
     font-weight: 700;
@@ -305,10 +388,43 @@ button{
     color: #f4f4fd;
 }
 .footer-text{
+    display: flex;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     max-width: 264px;
     color: #f4f4fd;
+}
+.footer-icon-Social{
+    align-items: center;
+    justify-content: center;
+}
+.footer-icon-title{
+    margin-bottom: 16px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+}
+.footer-icon-list{
+    max-width: 208px;
+    display: flex;
+    gap: 16px;
+    align-items: center;
+    justify-content: center;
+}
+.footer-icon-link{
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    background-color: #4D5AE5;
+}
+.footer-icon{
+    fill: #F4F4FD;
 }
