--- a/css/styles.css
+++ b/css/styles.css
@@ -92,7 +92,7 @@ p,h1,h2,h3,h4,h5,h6{
     height: 4px;
     position: absolute;
     left: 0;
-    bottom: -2px;
+    bottom: -1px;
     background: #404bbf;
 }
 .header-address{
@@ -124,6 +124,10 @@ p,h1,h2,h3,h4,h5,h6{
 
 /***section hero***/
 .hero {
+    max-width: 1440px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     padding-top: 188px;
     padding-bottom: 188px;
     background: #2e2f42;
@@ -147,6 +151,7 @@ p,h1,h2,h3,h4,h5,h6{
 button{
     border: none;
     cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-btn{
     font-weight: 500;
@@ -184,11 +189,11 @@ button{
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
-.advantages-icon-list{
+.advantages-ill{
     display: flex;
     gap: 24px;
 }
-.advantages-icon-item{
+.advantages-ill-icon{
     width: calc((100% - 3 * 24px) / 4);
     border: 1px solid #8e8f99;
     border-radius: 4px;
@@ -244,10 +249,11 @@ button{
 }
 .team-item{
     width: calc((100% - 3 * 24px) / 4);
-}
-.team-item{
     border-radius: 0 0 4px 4px;
     background-color: #FFF
+    box-shadow 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .team-name-gob{
     padding-top: 32px;
@@ -287,6 +293,13 @@ button{
     border-radius: 50%;
     display: flex;
     background-color: #4D5AE5;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.team-icon-link:hover{
+    background-color: #404bbf;
+}
+.team-icon-link:focus{
+    background-color: #404bbf;
 }
 .team-icon{
     fill: #F4F4FD;
@@ -314,9 +327,13 @@ button{
 }
 .portfolio-item{
     width:calc((100% - 48px) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-item:hover .portfolio-desc{
     transform: translate(0);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .portfolio-img-desc{
     position: relative;
@@ -334,7 +351,7 @@ button{
     top: 0;
     height: 100%;
     transform: translateY(100%);
-    transition: transform 250ms;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-subtitle-text{
     padding: 32px 16px;
@@ -368,6 +385,7 @@ button{
 }
 .footer .container{
     display: flex;
+    align-items: baseline
 }
 .footer-logo-text{
     margin-right: 120px;
@@ -396,7 +414,7 @@ button{
     max-width: 264px;
     color: #f4f4fd;
 }
-.footer-icon-Social{
+.footer-icon-social{
     align-items: center;
     justify-content: center;
 }
@@ -424,6 +442,13 @@ button{
     border-radius: 50%;
     display: flex;
     background-color: #4D5AE5;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
+}
+.footer-icon-link:hover{
+    background-color: #31d0aa;
+}
+.footer-icon-link:focus{
+    background-color: #31d0aa;
 }
 .footer-icon{
     fill: #F4F4FD;
