--- a/css/styles.css
+++ b/css/styles.css
@@ -123,11 +123,8 @@ p,h1,h2,h3,h4,h5,h6{
 /*============main===========*/
 
 /***section hero***/
-.hero {
+.hero{
     max-width: 1440px;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
     padding-top: 188px;
     padding-bottom: 188px;
     background: #2e2f42;
@@ -136,6 +133,9 @@ p,h1,h2,h3,h4,h5,h6{
        rgba(46, 47, 66, 0.7)),
        url(../images/people-office\-1.jpg);
        background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 .hero-title{
     font-weight: 700;
@@ -331,9 +331,9 @@ button{
 }
 .portfolio-item:hover .portfolio-desc{
     transform: translate(0);
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+   /* box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 2px 1px rgba(46, 47, 66, 0.08);
+        0px 2px 1px rgba(46, 47, 66, 0.08);*/
 }
 .portfolio-img-desc{
     position: relative;
@@ -352,6 +352,9 @@ button{
     height: 100%;
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+            0px 1px 1px rgba(46, 47, 66, 0.16),
+            0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .portfolio-subtitle-text{
     padding: 32px 16px;
