--- a/css/styles.css
+++ b/css/styles.css
@@ -132,7 +132,6 @@ p,h1,h2,h3,h4,h5,h6{
        rgba(46, 47, 66, 0.7),
        rgba(46, 47, 66, 0.7)),
        url(../images/people-office\-1.jpg);
-       background-size: 100%;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -189,7 +188,7 @@ button{
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
-.advantages-ill{
+.advantages-list-ill{
     display: flex;
     gap: 24px;
 }
@@ -331,9 +330,9 @@ button{
 }
 .portfolio-item:hover .portfolio-desc{
     transform: translate(0);
-   /* box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 2px 1px rgba(46, 47, 66, 0.08);*/
+        0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .portfolio-img-desc{
     position: relative;
@@ -352,9 +351,7 @@ button{
     height: 100%;
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-            0px 1px 1px rgba(46, 47, 66, 0.16),
-            0px 2px 1px rgba(46, 47, 66, 0.08);
+
 }
 .portfolio-subtitle-text{
     padding: 32px 16px;
