--- a/css/styles.css
+++ b/css/styles.css
@@ -198,6 +198,7 @@ button{
     border-radius: 4px;
     width: 264px;
     height: 112px;
+    margin-bottom: 8px;
     background: #f4f4fd;
     display: flex;
     align-items: center;
@@ -250,7 +251,9 @@ button{
     width: calc((100% - 3 * 24px) / 4);
     border-radius: 0 0 4px 4px;
     background-color: #FFF
-    box-shadow 0px 1px 6px rgba(46, 47, 66, 0.08),
+}
+.team-item{
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 2px 1px rgba(46, 47, 66, 0.08);
 }
@@ -330,9 +333,6 @@ button{
 }
 .portfolio-item:hover .portfolio-desc{
     transform: translate(0);
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-        0px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .portfolio-img-desc{
     position: relative;
@@ -351,7 +351,9 @@ button{
     height: 100%;
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .portfolio-subtitle-text{
     padding: 32px 16px;
