--- a/css/styles.css
+++ b/css/styles.css
@@ -135,6 +135,7 @@ p,h1,h2,h3,h4,h5,h6{
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    margin: 0 auto;
 }
 .hero-title{
     font-weight: 700;
